--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <header class="page-header">
       <nav class="header-nav">
-        <a class="logo" href="./index.html"
+        <a class="logo header-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
         <ul class="nav-list">
