--- a/index.html
+++ b/index.html
@@ -57,157 +57,169 @@
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-btn">Order Service</button>
       </section>
-      <section>
-        <h2>Benefits</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>
+      <section class="benefits">
+        <h2 class="benefits-title">Benefits</h2>
+        <ul class="benefits-list">
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Strategy</h3>
+            <p class="benefits-item-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Punctuality</h3>
+            <p class="benefits-item-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Diligence</h3>
+            <p class="benefits-item-text">
               Research and confirm brands with the strongest digital growth
               opportunities and minimize risk.
             </p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>
+          <li class="benefits-item">
+            <h3 class="benefits-subtitle">Technologies</h3>
+            <p class="benefits-item-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
               src="./images/photo1.jpg"
               alt="Mark Guerrero"
               width="264"
               height="260"
+              class="team-images"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Mark Guerrero</h3>
+            <p class="team-item-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/photo2.jpg"
               alt="Tom Ford"
               width="264"
               height="260"
+              class="team-images"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-subtitle">Tom Ford</h3>
+            <p class="team-item-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/photo3.jpg"
               alt="Camila Garcia"
               width="264"
               height="260"
+              class="team-images"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-subtitle">Camila Garcia</h3>
+            <p class="team-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-item">
             <img
               src="./images/photo4.jpg"
               alt="Daniel Wilson"
               width="264"
               height="260"
+              class="team-images"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-subtitle">Daniel Wilson</h3>
+            <p class="team-item-text">UI Designer</p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Portfolio</h2>
-        <ul>
-          <li>
+      <section class="portfolio">
+        <h2 class="portfolio-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
             <img
               src="./images/photo5.jpg"
               alt="Banking App"
               width="360"
               height="300"
+              class="portfolio-images"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="portfolio-subtitle">Banking App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/photo6.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
+              class="portfolio-images"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Cashless Payment</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/photo7.jpg"
               alt="Meditation App"
               width="360"
               height="300"
+              class="portfolio-images"
             />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <h3 class="portfolio-subtitle">Meditation App</h3>
+            <p class="portfolio-item-text">App</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/photo8.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
+              class="portfolio-images"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Taxi Service</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/photo9.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
+              class="portfolio-images"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="portfolio-subtitle">Screen Illustrations</h3>
+            <p class="portfolio-item-text">Design</p>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img
               src="./images/photo10.jpg"
               alt="Online Courses"
               width="360"
               height="300"
+              class="portfolio-images"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="portfolio-subtitle">Online Courses</h3>
+            <p class="portfolio-item-text">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="page-footer">
+      <a class="logo footer-logo" href="./index.html"
+        >Web<span class="logo-part">Studio</span></a
+      >
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
